Alignement pour PC portable (à vérifier sur fixe pour final)

--- a/all.css
+++ b/all.css
@@ -182,7 +182,7 @@ p{
     width: 27%;
     height: 27%;
     opacity: 0;
-    margin-top: 3cm;
+    margin: auto;
     border: 4px solid mediumpurple;
     box-shadow: 0 0 10px 10px rgba(255, 255, 255, 0.2);
     animation: 2.5s linear 1.8s ApparitionOpacite;
@@ -372,6 +372,7 @@ footer a{
     margin-left: -1%;
     margin-top: -1%;
     margin-bottom: 1%;
+    padding-right: 5px;
 }
 
 #tel{
@@ -453,7 +454,7 @@ i{
     padding-top: 20px;
     /*border: 3px solid mediumpurple;
     border-radius: 8px;*/
-    width: 28%;
+    width: 32%;
     height: 550px;
 }
 
@@ -609,7 +610,7 @@ i{
     justify-content: space-around;
     background: mediumpurple;
     height: 100%;
-    width: 25%;
+    width: 30%;
     color: black;
     font-family: TurisLight, sans-serif;
     margin-top: 35px;
